# zotero-llm-classify

./: .envrc  .gitignore  001_collect_literature_info.py  002_generate_classification_schema.py  002_generate_schema_and_create_collections.py  003_classify_literature.py  003_convert_schema_format.py  004_apply_classification.py  004_reclassify_with_new_schema.py  005_apply_classification_to_zotero.py  006_check_and_export_missing_proper_items.py  README.md  README_PROJECT.md  cli.py  config.py  env.example  llm_client.py  migrate_config.py  pyproject.toml  requirements.txt  setup_config.py
config/: config_example.txt  run.sh
docs/: CONFIGURATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_scripts.md
scripts/: analyze_all_items.py  analyze_content.py  analyze_hierarchy.py  analyze_library.py  main_simple.py
tests/: test_auto_classify.py  test_pdf_info.py
